# anote

./: .gitignore  Cargo.toml  README.md  deploy.sh  install.sh
.github/workflows/: darwin-release.yml  test.yml
.hermes/plans/: 2025-07-05_000000-system-clipboard-vim-yank.md
src/: clipboard.rs  config.rs  editor.rs  main.rs  render.rs  storage.rs  tui.rs  types.rs  utils.rs
