[package]
name = "anote"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3"
harper-core = "1.8"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
edtui = "0.11.1"
pulldown-cmark = { version = "0.12", default-features = false }
ratatui = "0.30"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
